tests/baselines/reference/es6ExportAllInEs5.errors.txt
server.ts(5,15): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== server.ts (1 errors) ====
    export class c {
    }
    export interface i {
    }
    export module m {
                  ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export var x = 10;
    }
    export var x = 10;
    export module uninstantiated {
    }
    
==== client.ts (0 errors) ====
    export * from "./server";